# kanban-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  migration.md  pyproject.toml  settings.toml
alembic/: env.py
services/auth-service/: .env.example    README.md  pyproject.toml  pyproject.toml    settings.toml
services/main-app/: .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  settings.toml
services/main-app/alembic/: env.py
services/main-app/alembic/versions/: 1a2d48c92870_remove_user_table_and_convert_user_id_.py  288880bea006_add_hashed_password_to_user_and_create_.py  2ce5b3d4e395_initial.py  2e02ad7e14af_add_notification.py  549db8bfdcab_add_completed_at_to_task.py  9ebcf4928f8d_remove_pgoto_and_password_hash_column_.py  a96a6124e721_add_unique_constraints.py  f253821c72e2_remove_permissions_table.py  fa220b929b14_add_unique_constraint_team_member_user_.py
services/main-app/src/: exceptions.py  main.py
services/main-app/src/auth/: __init__.py  dependencies.py  jwt.py  security.py
services/main-app/src/core/: config.py  database.py
services/main-app/src/enums/: __init__.py  task_status.py
services/main-app/src/models/: __init__.py  base.py  board.py  column.py  comment.py  notification.py  notifications.py  permission.py  refresh_token.py  task.py  task_members.py  team.py  team_member.py  user.py
services/main-app/src/repositories/: __init__.py  board.py  column.py  comment_repository.py  notification.py  refresh_token.py  statistics.py  task.py  task_member.py  team.py  team_member.py  user.py
services/main-app/src/schemas/: __init__.py  auth_schema.py  auth_schemas.py  board.py  column.py  comment.py  notification.py  statistics.py  task.py  task_member.py  team.py  team_member.py  user.py  user_schema.py
services/main-app/src/services/: __init__.py  auth.py  auth_service.py  board.py  column.py  comment.py  notification.py  statistics.py  task.py  task_member.py  team.py  team_member.py  user_service.py
services/main-app/tests/: conftest.py  test_statistics.py
services/main-app/tests/auth/: test_login.py  test_logout.py  test_me.py  test_refresh.py  test_register.py
services/main-app/tests/boards/: test_boards_unauthenticated.py  test_create_board.py  test_delete_board.py  test_get_board.py  test_list_boards.py  test_update_board.py
services/main-app/tests/columns/: test_columns_unauthenticated.py  test_create_column.py  test_delete_column.py  test_get_column.py  test_list_columns.py  test_update_column.py
services/main-app/tests/comments/: test_comments_unauthenticated.py  test_create_comment.py  test_delete_comment.py  test_get_comment.py  test_list_comments.py  test_update_comment.py
services/main-app/tests/tasks/: test_create_task.py  test_delete_task.py  test_get_task.py  test_list_tasks.py  test_tasks_unauthenticated.py  test_update_task.py
services/main-app/tests/team_members/: test_create_team_member.py  test_delete_team_member.py  test_list_team_members.py  (+1 more)
(+36 files in other folders)
