[tool.poetry]
name = "kanban-auth-service"
version = "0.1.0"
description = "Authentication service for Kanban Tracker"
authors = ["Boris <soskinboris@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.1"
asyncpg = "^0.30.0"
pydantic = "^2.0.0"
python-jose = "^3.3.0"  # For JWT
passlib = "^1.7.4"      # For password hashing
bcrypt = "^4.0.1"       # Password hashing backend

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"